--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
           <div
             class="d-flex gap-3 justify-content-center align-items-center mt-3 mt-lg-0"
           >
-            <a href="#"><img src="./assets/Instagram.png" alt="Instagram" /></a>
-            <a href="#"><img src="./assets/Facebook.png" alt="Instagram" /></a>
-            <a href="#"><img src="./assets/Twitter.png" alt="Instagram" /> </a>
+            <a href="#"><img src="./Instagram.png" alt="Instagram" /></a>
+            <a href="#"><img src="./Facebook.png" alt="Instagram" /></a>
+            <a href="#"><img src="./Twitter.png" alt="Instagram" /> </a>
           </div>
         </div>
       </div>
