--- a/index.html
+++ b/index.html
@@ -102,24 +102,38 @@
               </h4>
               <p class="card-text">
                 Have too many pay day loans and wondering how to come out of the
-                reloan cycle.
+                reloan cycle ?
+              </p>
+              <p class="card-text">
+                Get a loan and clear all your high-interest EMIs with a single
+                instalment at a reasonable interest rate.
               </p>
               <a
                 href="#"
                 class="btn insideBtn"
+                style="color: #ddc700"
                 role="button"
                 data-bs-toggle="modal"
                 data-bs-target="#applyModal"
-                >Apply Now <img src="./arrow-right.svg"
+                >Apply Now <img src="./arrow-right (1).svg"
               /></a>
 
               <div class="overlay">
+                <div style="font-size: 16px" class="fw-bold">
+                  Eligibility & Documents :
+                </div>
+                <hr />
                 <p class="card-text">
-                  Have too many pay day loans and wondering how to come out of
-                  the reloan cycle. Have too many pay day loans and wondering
-                  how to come out of the reloan cycle. Have too many pay day
-                  loans and wondering how to come out of the reloan cycle.
+                  If your salary is above 75,000 and reside in Bengaluru or
+                  Mysuru, you are eligible to apply for a personal loan.
                 </p>
+                <br />
+                <ul class="overlayList">
+                  <li>No Collateral</li>
+                  <li>Quick processing</li>
+                  <li>Fixed Rate of Interest</li>
+                  <li>Repayment flexibility</li>
+                </ul>
                 <a
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
@@ -137,29 +151,41 @@
                 class="card-title fw-bold"
                 style="font-size: 20px; color: #2c689f"
               >
-                Overdue Personal Loans or Credit cards are troubling you
+                Overdue Personal Loans/Credit cards are troubling you ?
               </h4>
               <p class="card-text">
-                Unable to catch up with your overdue EMI’s on your personal loan
-                or overdue credit cards are making your financial health sick
-                day by day.
+                Often, borrowers miss an EMI due to unforeseen circumstances.
+              </p>
+              <p class="card-text">
+                No worries. Get a quick loan to pay all your outstanding or
+                overdue accounts.
               </p>
               <a
                 href="#"
                 class="btn insideBtn"
+                style="color: #ddc700"
                 role="button"
                 data-bs-toggle="modal"
                 data-bs-target="#applyModal"
-                >Apply Now <img src="./arrow-right.svg"
+                >Apply Now <img src="./arrow-right (1).svg"
               /></a>
 
               <div class="overlay">
+                <div style="font-size: 16px" class="fw-bold">
+                  Eligibility & Documents :
+                </div>
+                <hr />
                 <p class="card-text">
-                  Have too many pay day loans and wondering how to come out of
-                  the reloan cycle. Have too many pay day loans and wondering
-                  how to come out of the reloan cycle. Have too many pay day
-                  loans and wondering how to come out of the reloan cycle.
+                  If your salary is above 75,000 and reside in Bengaluru or
+                  Mysuru, you are eligible to apply for a personal loan.
                 </p>
+                <br />
+                <ul class="overlayList">
+                  <li>No Collateral</li>
+                  <li>Quick processing</li>
+                  <li>Fixed Rate of Interest</li>
+                  <li>Repayment flexibility</li>
+                </ul>
                 <a
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
@@ -177,30 +203,41 @@
                 class="card-title fw-bold"
                 style="font-size: 20px; color: #2c689f"
               >
-                Bad credit score
+                Bad credit ? We can help
               </h4>
               <p class="card-text">
-                Enough is enough. No more loan rejections. Consolidate all your
-                bad loans, overdue loans into smaller EMI and build your score.
-                Gain your financial freedom with our personally curated loan
-                offers.
+                Can you get a personal loan with a low score ?
+              </p>
+              <p class="card-text">
+                <b>Answer is No.</b> Removing negative accounts is one of the
+                fastest ways to increase your credit score.
               </p>
               <a
                 href="#"
                 class="btn insideBtn"
+                style="color: #ddc700"
                 role="button"
                 data-bs-toggle="modal"
                 data-bs-target="#applyModal"
-                >Apply Now <img src="./arrow-right.svg"
+                >Apply Now <img src="./arrow-right (1).svg"
               /></a>
 
               <div class="overlay">
+                <div style="font-size: 16px" class="fw-bold">
+                  Eligibility & Documents :
+                </div>
+                <hr />
                 <p class="card-text">
-                  Have too many pay day loans and wondering how to come out of
-                  the reloan cycle. Have too many pay day loans and wondering
-                  how to come out of the reloan cycle. Have too many pay day
-                  loans and wondering how to come out of the reloan cycle.
+                  If your salary is above 75,000 and reside in Bengaluru or
+                  Mysuru, you are eligible to apply for a personal loan.
                 </p>
+                <br />
+                <ul class="overlayList">
+                  <li>No Collateral</li>
+                  <li>Quick processing</li>
+                  <li>Fixed Rate of Interest</li>
+                  <li>Repayment flexibility</li>
+                </ul>
                 <a
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
@@ -222,24 +259,35 @@
               </h4>
               <p class="card-text">
                 Unable to pay your EMI’s any longer. Planning to opt for
-                settlements on your long pending loan accounts.
+                settlements on your overdue loan accounts.
               </p>
+              <p class="card-text"></p>
               <a
                 href="#"
                 class="btn insideBtn"
+                style="color: #ddc700"
                 role="button"
                 data-bs-toggle="modal"
                 data-bs-target="#applyModal"
-                >Apply Now <img src="./arrow-right.svg"
+                >Apply Now <img src="./arrow-right (1).svg"
               /></a>
 
               <div class="overlay">
+                <div style="font-size: 16px" class="fw-bold">
+                  Eligibility & Documents :
+                </div>
+                <hr />
                 <p class="card-text">
-                  Have too many pay day loans and wondering how to come out of
-                  the reloan cycle. Have too many pay day loans and wondering
-                  how to come out of the reloan cycle. Have too many pay day
-                  loans and wondering how to come out of the reloan cycle.
+                  If your salary is above 75,000 and reside in Bengaluru or
+                  Mysuru, you are eligible to apply for a personal loan.
                 </p>
+                <br />
+                <ul class="overlayList">
+                  <li>No Collateral</li>
+                  <li>Quick processing</li>
+                  <li>Fixed Rate of Interest</li>
+                  <li>Repayment flexibility</li>
+                </ul>
                 <a
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
@@ -262,25 +310,36 @@
               <p class="card-text">
                 Assist with new Personal loan, Credit card, Housing loan
               </p>
+              <p class="card-text"></p>
               <a
                 href="#"
                 class="btn insideBtn"
+                style="color: #ddc700"
                 role="button"
                 data-bs-toggle="modal"
                 data-bs-target="#applyModal"
-                >Apply Now <img src="./arrow-right.svg"
+                >Apply Now <img src="./arrow-right (1).svg"
               /></a>
 
               <div class="overlay">
+                <div style="font-size: 16px; color: #5a5a5a" class="fw-bold">
+                  Eligibility & Documents :
+                </div>
+                <hr />
                 <p class="card-text">
-                  Have too many pay day loans and wondering how to come out of
-                  the reloan cycle. Have too many pay day loans and wondering
-                  how to come out of the reloan cycle. Have too many pay day
-                  loans and wondering how to come out of the reloan cycle.
+                  If your salary is above 75,000 and reside in Bengaluru or
+                  Mysuru, you are eligible to apply for a personal loan.
                 </p>
+                <br />
+                <ul class="overlayList">
+                  <li>No Collateral</li>
+                  <li>Quick processing</li>
+                  <li>Fixed Rate of Interest</li>
+                  <li>Repayment flexibility</li>
+                </ul>
                 <a
                   href="#"
-                  class="btn rounded-0 insideBtn hoverBtn"
+                  class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
