--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
+                  style="color: #ddc700"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
-                  >Apply Now <img src="./arrow-right.svg"
+                  >Apply Now <img id="my-img" src="./arrow-right (1).svg"
                 /></a>
               </div>
             </div>
@@ -190,9 +191,10 @@
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
+                  style="color: #ddc700"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
-                  >Apply Now <img src="./arrow-right.svg"
+                  >Apply Now <img id="my-img" src="./arrow-right (1).svg"
                 /></a>
               </div>
             </div>
@@ -242,9 +244,10 @@
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
+                  style="color: #ddc700"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
-                  >Apply Now <img src="./arrow-right.svg"
+                  >Apply Now <img id="my-img" src="./arrow-right (1).svg"
                 /></a>
               </div>
             </div>
@@ -292,9 +295,10 @@
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
+                  style="color: #ddc700"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
-                  >Apply Now <img src="./arrow-right.svg"
+                  >Apply Now <img id="my-img" src="./arrow-right (1).svg"
                 /></a>
               </div>
             </div>
@@ -341,9 +345,10 @@
                   href="#"
                   class="btn hoverBtn rounded-0 insideBtn"
                   role="button"
+                  style="color: #ddc700"
                   data-bs-toggle="modal"
                   data-bs-target="#applyModal"
-                  >Apply Now <img src="./arrow-right.svg"
+                  >Apply Now <img id="my-img" src="./arrow-right (1).svg"
                 /></a>
               </div>
             </div>
