--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body oncontextmenu="return false">
     <!-- NavBar start -->
     <nav class="navbar navbar-dark navbar-expand-lg">
       <div class="container-fluid" style="margin: 4px 30px">
-        <a class="navbar-brand text-white" style="width: 30%" href="#"
+        <a class="navbar-brand text-white" style="width: 34%" href="#"
           ><img src="./LA Logo.svg" width="250"
         /></a>
 
